package com.xd.protobuf;

option java_package = "com.xd.netty.subscribe";
option java_outer_classname = "SubscribeReqProto";
message SubscribeReq {
	required int32 subReqId = 1;
	required string username = 2;
	required string productName = 3;
	repeated string address = 4;
}
