package com.xd.protobuf;

option java_package = "com.xd.netty.subscribe";
option java_outer_classname = "SubscribeRespProto";
message SubscribeResp {
	required int32 subReqId = 1;
	required int32 respCode = 2;
	optional string desc = 3;
}
